force-app/main/default/objects/Related_Source__c/fields/Allocated_Project__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Project__c</fullName>
    <label>Allocated Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>