force-app/main/default/objects/Related_Source__c/fields/Campaign_Std__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Std__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>