force-app/main/default/objects/Related_Source__c/fields/Dubble__c.field-meta.xml
<CustomField>
    <fullName>Dubble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dubble</label>
    <type>Checkbox</type>
</CustomField>