force-app/main/default/objects/Related_Source__c/fields/Expired_On__c.field-meta.xml
<CustomField>
    <fullName>Expired_On__c</fullName>
    <formula>DATEVALUE(CreatedDate) + 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired On</label>
    <type>Date</type>
</CustomField>