force-app/main/default/objects/Related_Source__c/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <label>Primary Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>