force-app/main/default/objects/Related_Source__c/fields/scheck__c.field-meta.xml
<CustomField>
    <fullName>scheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>scheck</label>
    <type>Checkbox</type>
</CustomField>