force-app/main/default/objects/Related_Source__c/fields/Secondary_Contry_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contry_Code__c</fullName>
    <label>Secondary Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>