force-app/main/default/objects/Related_Source__c/fields/Secondary_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone1__c</fullName>
    <formula>Secondary_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Phone</label>
    <type>Text</type>
</CustomField>