force-app/main/default/objects/Related_Source__c/fields/Source_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Source_Type_c__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Direct Walkin/Site Branding</fullName>
            </value>
            <value>
                <fullName>Exhibition Event</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Print Media</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Channel partner</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>BTL Activity</fullName>
            </value>
            <value>
                <fullName>Corporate Activity</fullName>
            </value>
            <value>
                <fullName>CS App</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>Exhibition/Event</fullName>
            </value>
            <value>
                <fullName>Investor Sale</fullName>
            </value>
            <value>
                <fullName>LSA</fullName>
            </value>
            <value>
                <fullName>No Source</fullName>
            </value>
            <value>
                <fullName>Zuari Champion</fullName>
            </value>
            <value>
                <fullName>Zuari Privilege</fullName>
            </value>
            <value>
                <fullName>REAP</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Repeat Marketing</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Watabid</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Group employee Referral</fullName>
            </value>
            <value>
                <fullName>Real Estate Portals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>