force-app/main/default/objects/Related_Source__c/fields/Tertiary_Source__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Source__c</fullName>
    <label>Tertiary Source</label>
    <type>TextArea</type>
</CustomField>