force-app/main/default/objects/Related_Source__c/fields/type_of_lead__c.field-meta.xml
<CustomField>
    <fullName>type_of_lead__c</fullName>
    <label>type of lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Lead</fullName>
            </value>
            <value>
                <fullName>Transfer Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>